# cemircol-go

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  benchmark.go  cemircol.go  comparison.cemir  comparison.parquet  comparison_benchmark.go  go.mod  main  main.go  publish.sh  setup.sh
.claude/memory/: MEMORY.md  performance_optimizations.md  project_overview.md  publish_workflow.md  user_profile.md
benchmark/: emails.dict  generate_logs.go  logs.parquet  logs_rcpt.cemir  logs_status.cemir  logs_time.cemir  parquet_parser.go  postfix_logger.go  postfix_parser.go
benchmark/compare_all/: main.go
benchmark/finance/: main.go
benchmark/logger/: main.go
benchmark/parser/: main.go
benchmark/pq_logger/: main.go
benchmark/pq_parser/: main.go
benchmark/sensor/: main.go
benchmark/weblog/: main.go
cemircol/: cemircol.go
src/: c_api.rs  lib.rs  reader.rs  writer.rs
